--- a/Makefile.in
+++ b/Makefile.in
@@ -137,6 +137,8 @@ LIBS = @LIBS@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
+MOBA_AMBILIGHT = @MOBA_AMBILIGHT@
+MOBA_SHUTDOWN = @MOBA_SHUTDOWN@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
