--- a/configure.ac
+++ b/configure.ac
@@ -3,15 +3,16 @@
 
 AC_PREREQ([2.69])
 AC_INIT([moba-environment], [0.1.0-0000], [pappi-@gmx.de])
+
 AC_CONFIG_SRCDIR([src])
 AC_CONFIG_HEADERS([config.h])
+AC_CONFIG_SUBDIRS([modules/lib-msghandling])
 
-AM_INIT_AUTOMAKE([foreign])
+AM_INIT_AUTOMAKE([-Wall foreign])
 AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
 AC_PROG_CXX
-AC_PROG_CC
 
 # Checks for libraries.
 AC_CHECK_LIB([wiringPi], [main])
@@ -22,8 +23,13 @@ AC_CHECK_HEADERS([unistd.h])
 # Checks for typedefs, structures, and compiler characteristics.
 AC_CHECK_HEADER_STDBOOL
 
-# Checks for library functions.
-AC_CONFIG_FILES([Makefile])
+AX_CXX_COMPILE_STDCXX_17()
+
+AC_CONFIG_FILES([
+    Makefile
+    src/Makefile
+])
+
 AC_OUTPUT
 
 AC_CHECK_PROG([MOBA_SHUTDOWN],[moba-shutdown],[yes],[no])
