--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,5 @@
-bin_PROGRAMS = moba-environment
-moba_environment_SOURCES = src/main.cpp src/bridge.cpp src/msgloop.cpp
-moba_environment_LDADD = -lwiringPi /usr/local/lib/libMoBaCommon.a
-LDFLAGS += -L/usr/local/lib -pthread
-
-ACLOCAL_AMFLAGS = -I m4
+## Process this file with automake to generate Makefile.in
+SUBDIRS = \
+    modules/lib-msghandling/src/moba \
+    src
+CLEANFILES = *~
