--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,17 +5,21 @@ bin_PROGRAMS = \
 moba_environment_SOURCES = \
     main.cpp \
     bridge.cpp \
-    msgloop.cpp
+    msgloop.cpp \
+    eclipsecontrol.cpp
 
 moba_environment_LDADD = \
+    $(GLIB_LIBS) \
     -lwiringPi \
-    /usr/local/lib/libmobacommon.a \
+    -lmobacommon \
     $(srcdir)/../modules/lib-msghandling/src/moba/libmsghandling.a
 
 AM_LDFLAGS = -L/usr/local/lib -pthread
 
 AM_CPPFLAGS = \
     -I$(srcdir)/../modules/lib-msghandling/src \
+    $(GLIB_CFLAGS) \
+    -DSYSCONFIR='"$(sysconfdir)"' \
     -ggdb -g3 -O3 -Wall -Wno-deprecated-declarations
 
 CLEANFILES = *~
